--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.13.0",
     "method-override": "^2.3.5",
     "nedb": "^1.8.0",
+    "oauth": "^0.9.14",
     "twit": "^2.2.3"
   }
 }
